testdata/not_valid/raw_string_keeps_line_count.kevs
x = 42;

s = `1
2
3
`;

x = 42;
